examples/blue-green/bluegreen-preview-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bluegreen-demo-preview
  annotations:
    # Add ingress.class as addon-http-application-routing
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: bluegreen-demo-preview.83ef483f2f5e4fa98c33.eastus.aksapp.io # Add Application DNS name to be registered in DNS
    http:
      paths:
      - path: /
        backend:
          serviceName: bluegreen-demo-preview
          servicePort: 80
